Actualizar brand con nuevo logo

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="navigation-content-wrap">
         <div class="navigation-left">
           <a href="index.html" aria-current="page" class="brand w-nav-brand w--current">
-            <h1 class="sonar-gradient-text">SONAR</h1>
+            <img src="images/sonar/logo.png" alt="SONAR Logo" class="brand-logo">
           </a>
         </div>
         <div class="navigation-right">
