--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
     </div>
   </div>
   <section class="hero-section">
+    <img src="images/sonar/hero-background.gif" alt="Music Visualizer Background" class="hero-gif-background">
     <div class="wave-animation">
       <div class="code-embed-3 w-embed w-iframe"><iframe src="https://my.spline.design/waveform-657ca1321f740a323de8eac826e5a1fb/" frameborder="0" width="100%" height="100%"></iframe></div>
     </div>
