Optimizar navbar (30% más delgada) y mejorar fondo hero con animaciones SVG

--- a/index.html
+++ b/index.html
@@ -151,9 +151,8 @@
     </div>
   </div>
   <section class="hero-section">
-    <img src="images/sonar/hero-background.gif" alt="Music Visualizer Background" class="hero-gif-background">
     <div class="wave-animation">
-      <div class="code-embed-3 w-embed w-iframe"><iframe src="https://my.spline.design/waveform-657ca1321f740a323de8eac826e5a1fb/" frameborder="0" width="100%" height="100%"></iframe></div>
+      <img src="images/sonar/hero-background.svg" alt="Animated Background" style="width: 100%; height: 100%; object-fit: cover;">
     </div>
     <div class="w-layout-blockcontainer container w-container">
       <div data-w-id="e1da36e1-708a-33f9-63ff-31a289c8e09d" class="hero-content-wrap">
