✨ Add animated GIF to CTA section - Replaced static image with dynamic Cloudinary GIF for better engagement

--- a/index.html
+++ b/index.html
@@ -423,7 +423,10 @@
           <div class="cta-button-wrap">
             <a href="#" class="primary-button w-button">Empieza Ahora</a>
           </div>
-        </div><img src="images/66d882d443a70e9a381bfa4f_2-min-p-800-min.png" loading="eager" sizes="(max-width: 767px) 100vw, (max-width: 842px) 95vw, 800px" srcset="images/66d882d443a70e9a381bfa4f_2-min-p-800-min-p-500.png 500w, images/66d882d443a70e9a381bfa4f_2-min-p-800-min.png 800w" alt="3d Element" class="cta-section-image">
+        </div>
+        <div class="cta-image-wrap">
+          <img src="https://res.cloudinary.com/das1ozwma/image/upload/v1748804635/3348fb0694f92cfaadc61bfcd1bfdc4d_kmlrgf.gif" loading="eager" alt="Animated SONAR Element" class="cta-section-image" style="border-radius: 12px; box-shadow: 0 20px 40px rgba(255, 161, 137, 0.2);">
+        </div>
       </div>
     </div>
   </section>
