feat: CTA section with GIF background - GIF as full background for CTA content, improved text contrast

--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
   <section class="cta-section section">
     <div class="w-layout-blockcontainer container w-container">
       <div data-w-id="f2d10b95-5678-df1a-3319-4eca71829e74" class="cta-content-wrap">
+        <img src="https://res.cloudinary.com/das1ozwma/image/upload/v1748804635/3348fb0694f92cfaadc61bfcd1bfdc4d_kmlrgf.gif" loading="eager" alt="Animated SONAR Background" class="cta-section-background-image">
         <div class="cta-section-content-wrap">
           <div class="section-heading-wrap">
             <h2 class="section-heading">Empieza Tu Viaje Musical Hoy</h2>
@@ -423,9 +424,6 @@
           <div class="cta-button-wrap">
             <a href="#" class="primary-button w-button">Empieza Ahora</a>
           </div>
-        </div>
-        <div class="cta-image-wrap">
-          <img src="https://res.cloudinary.com/das1ozwma/image/upload/v1748804635/3348fb0694f92cfaadc61bfcd1bfdc4d_kmlrgf.gif" loading="eager" alt="Animated SONAR Element" class="cta-section-image" style="border-radius: 12px; box-shadow: 0 20px 40px rgba(255, 161, 137, 0.2);">
         </div>
       </div>
     </div>
