feat: Update navbar button text to 'Launch App'

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="navigation-right">
           <a href="#" class="outline-button w-button">Explorar</a>
           <a href="#" class="nav-link w-inline-block">
-            <div class="nav-link-title primary-button">Registrarse Gratis</div>
+            <div class="nav-link-title primary-button">Launch App</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <div data-delay="0" data-hover="false" class="dropdown w-dropdown">
