--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         
         <div class="navigation-right">
           <a href="#" class="outline-button w-button">Explorar</a>
-          <a href="#" class="nav-link w-inline-block">
+          <a href="https://hackathon-git-main-altobysuals-projects.vercel.app/?action=auth" class="nav-link w-inline-block">
             <div class="nav-link-title primary-button">Launch App</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
